--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <div class="grid-container">
             <h2> Initial Config </h2>
-            <div class="grid start">
-                <div class="row">
+            <div class="grid start" id="initConfig">
+                <!-- <div class="row">
                     <div class="cell" data-pos="0,0"><span>6</span></div>
                     <div class="cell" data-pos="0,1"><span>4</span></div>
                     <div class="cell" data-pos="0,2"><span>7</span></div>
@@ -32,15 +32,15 @@
                     <div class="cell" data-pos="2,0"><span>3</span></div>
                     <div class="cell" data-pos="2,1"><span>2</span></div>
                     <div class="cell" data-pos="2,2"><span>1</span></div>
-                </div>
+                </div> -->
             </div>
             <button onclick="start()"> Solve </button>
             <button onclick="showSolution()"> Show Step </button>
         </div>
         <div class="grid-container">
             <h2> Goal Config </h2>
-            <div class="grid goal">
-                <div class="row">
+            <div class="grid goal" id="goalConfig">
+                <!-- <div class="row">
                     <div class="cell"><span>1</span></div>
                     <div class="cell"><span>2</span></div>
                     <div class="cell"><span>3</span></div>
@@ -54,7 +54,7 @@
                     <div class="cell"><span>7</span></div>
                     <div class="cell"><span>8</span></div>
                     <div class="cell"></div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
